--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <button class="button">Pasta</button>
   </a>
    <p></p>
-    <img src="bilder/nedladdning (37).jpeg" alt="exempelbild" class="min-bild">
+    <img src="nedladdning (37).jpeg" alt="exempelbild" class="min-bild">
     <a href="alla_recept.html">
       <button class="button">Alla recept</button>
     </a>
