--- a/tacos_recept.html
+++ b/tacos_recept.html
@@ -202,7 +202,7 @@
 
 <h4 class="shape2"></h4>
 <img class="bild2" src="tacos2.png" alt="">
-<img class="bild3" src="image.png" alt="">
+<img class="bild3" src="image(1).png" alt="">
 
 
 </body>
